# freetype-gl

./: .gitmodules  freetype-gl.cabal
src/Graphics/Rendering/: FreeTypeGL.hsc
